# log-analysis

./: .gitignore  ;  Cargo.toml  Cargo_toml_save  README.md  \  decrypt.sh  delme.rs  helloall.cast  ip2loc_json  ip_db  ip_db.bak  logdashideas.txt  output.txt  queryip2loc.sh  run.sh  temp
.cargo/: config.toml
.github/workflows/: rust.yml
api-book/: book.toml
app/: Cargo.toml
app/src/: client.rs  server.rs
src/: helper.rs  ip2location.rs  lib.rs  main.rs  main.rs~  scroll_widget.rs  types.rs  ui.rs  zeek.rs
src/ip2location/: ip2location.rs
src/types/: error.rs  helpers.rs  log_data.rs  log_directory.rs  log_header.rs  log_proto.rs  search.rs  types.rs
src/zeek/: zeek_log.rs  zeek_log_data.rs  zeek_log_directory.rs  zeek_log_header.rs  zeek_log_proto.rs  zeek_search.rs  zeek_search_params.rs
tests/: create_svg.rs  directory.rs  header.rs  ip2location.rs  search.rs  zeek_search.rs
