[package]
authors = ["ende <endepointe@gmail.com>"]
categories = ["filesystem"]
description = "A zeek log analysis library implemented in Rust"
name = "log-analysis"
repository = "https://github.com/endepointe/log-analysis"
version = "0.1.52"
edition = "2021"
license = "MIT"

[profile.bench]
debug = true

[features]
default = ["ip2location"]

ip2location = []

[dependencies]
derive_builder = "0.20.0"
serde = "1.0.207"
