[package]
authors = ["ende"]
categories = ["filesystem"]
description = "A zeek log analysis library implemented in Rust"
name = "log-analysis"
repository = "https://github.com/endepointe/log-analysis"
version = "0.1.6"
edition = "2021"
license = "MIT"
exclude = [
    "decrypt.sh",
    "run.sh",
    "queryip2loc.sh",
    "zeek-test-logs.tar.aes256",
]

[profile.bench]
debug = true

[features]
default = []
ip2location = []

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.28.1"
derive_builder = "0.20.0"
flate2 = "1.0.31"
ratatui = "0.28.1"
reqwest = { version = "0.12.7", features = ["blocking"] } 
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = "1.39.3"
